Changed login create form style to avoid text overlap

--- a/src/theme.scss
+++ b/src/theme.scss
@@ -213,8 +213,8 @@ $theme: (
   height: 400px;
   left: 50%;
   top: 50%;
-  z-index: -1;
-  transition: opacity .5s, top .5s;
+  z-index: -10;
+  // transition: opacity .5s, top .5s;
   transform: translate(-50%, -50%);
 }
 
